# manebu

./: .gitignore  EvoJaxMNIST.ipynb  Manebu.ipynb  VisionGNN.ipynb  VisionGraph.ipynb  forward_forward.ipynb  main.ipynb  main.py  pyproject.toml  requirements.txt
manebu/core/: vision.py
manebu/phenomena/graph/: __graph.py  __init__.py
manebu/phenomena/video/: __init__.py  __video.py  utils.py
manebu/torch/nn/: common.py  ff.py
manebu/utils/: simple_utils.py
tutorial/: ForwardForwardEx.ipynb  ForwardForwardInGraphAttention.ipynb  SelfReconstructGraph.ipynb  VisionGNN.ipynb  forward_forward.ipynb  main.ipynb
tutorial/blender/: main.py
tutorial/jax_tutorial/: EvoJaxMNIST.ipynb  jraph_basic.py  jraph_e_voting.py
