[tool.poetry]
name = "manebu"
version = "0.1.0"
description = ""
authors = ["n4okins <naoki.jsdf.jj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jaxlib = [
{url = "https://storage.googleapis.com/jax-releases/cuda11/jaxlib-0.3.24+cuda11.cudnn82-cp39-cp39-manylinux2014_x86_64.whl", markers = "sys_platform == 'linux'"},
{url = "https://whls.blob.core.windows.net/unstable/cuda111/jaxlib-0.3.24+cuda11.cudnn82-cp39-cp39-win_amd64.whl", markers = "sys_platform == 'win32'"},
]

jax = {extras = ["cu113"], version = "^0.3.25"}

matplotlib = "^3.6.2"
jupyter = "^1.0.0"
opencv-python = "^4.6.0.66"
Pillow = "^9.3.0"
dm-haiku = "^0.0.9"
absl-py = "^1.3.0"
jraph = "^0.0.6.dev0"
optax = "^0.1.4"
tensorflow-datasets = "^4.7.0"
jupyterlab = "^3.5.0"


torch = [
    {url = "https://download.pytorch.org/whl/cu113/torch-1.12.1%2Bcu113-cp39-cp39-linux_x86_64.whl", markers = "sys_platform == 'linux'"},
    {url = "https://download.pytorch.org/whl/cu113/torch-1.12.1%2Bcu113-cp39-cp39-win_amd64.whl", markers = "sys_platform == 'win32'"},
]

torchvision = [
    {url = "https://download.pytorch.org/whl/cu113/torchvision-0.13.1%2Bcu113-cp39-cp39-linux_x86_64.whl", markers = "sys_platform == 'linux'"},
    {url = "https://download.pytorch.org/whl/cu113/torchvision-0.13.1%2Bcu113-cp39-cp39-win_amd64.whl", markers = "sys_platform == 'win32'"},
]


pandas = "^1.5.2"
seaborn = "^0.12.1"
evojax = "^0.2.15"


[[tool.poetry.source]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
