[tool.poetry]
name = "manebu"
version = "0.1.0"
description = ""
authors = ["n4okins <n4okins.developer@gmail.com>"]
readme = "README.md"
packages = [
    { include = "manebu", from = "." }
]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
torchvision = "^0.14.1"
torchaudio = "^0.13.1"
matplotlib = "^3.6.2"
jraph = "^0.0.6.dev0"
evojax = "^0.2.15"
jupyter = "^1.0.0"
jupyterlab = "^3.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
