[tool.poetry]
name = "manebu"
version = "0.1.0"
description = ""
authors = ["n4okins <n4okins.developer@gmail.com>"]
readme = "README.md"
packages = [
    { include = "manebu", from = "." }
]

[tool.poetry.dependencies]
python = "=3.10.9"

matplotlib = "^3.6.2"
jupyter = "^1.0.0"
jupyterlab = "^3.5.2"
pillow = "^9.3.0"
scipy = "^1.9.3"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
